# ncvm_asm

./: .gitmodules  Cargo.toml  a.ncvm  bloat.sh  codegen.py  min_build.sh  min_install.sh  test  test.c  z_test
examples/: 1.asm  perf_test.asm
ncvm_asm_c_api/: Cargo.toml
ncvm_asm_c_api/src/: lib.rs
src/: compiler.rs  lib.rs  main.rs  opcodes.rs  parser.rs  precompiler.rs  types.rs
